added images, simple css, simple javascript

--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="https://art.pixilart.com/11f57b69dd3065a.png">
+    <link rel="stylesheet" href="dog.css">
+    <title>Sick Site XD</title>
 </head>
 <body>
+    <style>
+        body{
+            background-color: rgb(243, 128, 212);
+        }
+    </style>
 
-    <h1>KEK</h1>
-    <p>kekkek</p>
+    <h1>KEK Szn 14 phrk szn KEK</h1>
+    <p>NERF SUPPORT ITEMS PHREAK SZN XDDDDD</p>
+    <button onclick="rotateImage()">Secret</button>
+    <img id=phreak src="https://media.tenor.com/Wc1nPL0FsegAAAAM/dancing-dance.gif" alt="riotphreakdance" style="width:200px;height:200px;">
+    <script src="script.js"></script>
+
+
+    <h2>Gengar goat</h2>
+    <img id="GengarG" src="https://art.pixilart.com/11f57b69dd3065a.png" alt="Gengar looking sick">
     
 </body>
 </html>
