added picture with transitions

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
     <h1>KEK Szn 14 phrk szn KEK</h1>
     <p>NERF SUPPORT ITEMS PHREAK SZN XDDDDD</p>
-    <button onclick="rotateImage()">Secret</button>
+    <button onclick="rotateImage(); toggleImage()" >Secret</button>
     <img id=phreak src="https://media.tenor.com/Wc1nPL0FsegAAAAM/dancing-dance.gif" alt="riotphreakdance" style="width:200px;height:200px;">
+
+    <img id="jax" src="https://i.redd.it/jax-is-satoru-gojo-xd-v0-3ru71ka8cxwa1.jpg?width=554&format=pjpg&auto=webp&s=051c36c5fe8dcb5ba35cb2ee47a7a37ed4626b3c" style="width:200px;height:200px">
+    <img id="jeff" class="hidden" src="https://hips.hearstapps.com/hmg-prod/images/jeffrey-epstein-attends-launch-of-radar-magazine-at-hotel-news-photo-591529968-1562782199.jpg?crop=1xw:0.5xh;center,top&resize=1200:*" style="width:200px;height:200px">
     <script src="script.js"></script>
 
 
