--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://art.pixilart.com/11f57b69dd3065a.png">
-    <link rel="stylesheet" href="dog.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Sick Site XD</title>
 </head>
 <body>
