making index resemble wireframe

--- a/index.html
+++ b/index.html
@@ -5,27 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://art.pixilart.com/11f57b69dd3065a.png">
     <link rel="stylesheet" href="styles.css">
-    <title>Sick Site XD</title>
+    <title>Car Rental Site</title>
 </head>
 <body>
-    <style>
-        body{
-            background-color: rgb(243, 128, 212);
-        }
-    </style>
 
-    <h1>KEK Szn 14 phrk szn KEK</h1>
-    <p>NERF SUPPORT ITEMS PHREAK SZN XDDDDD</p>
-    <button onclick="rotateImage(); toggleImage()" >Secret</button>
-    <img id=phreak src="https://media.tenor.com/Wc1nPL0FsegAAAAM/dancing-dance.gif" alt="riotphreakdance" style="width:200px;height:200px;">
+    <section>
+        <nav>
+            <img id="GengarG" src="https://art.pixilart.com/11f57b69dd3065a.png" alt="TempLogo">
+            <div class="nav-links">
+                <ul>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">ABOUT</a></li>
+                    <li><a href="">LOGIN</a></li>
+                    <li><a href="">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
 
-    <img id="jax" src="https://i.redd.it/jax-is-satoru-gojo-xd-v0-3ru71ka8cxwa1.jpg?width=554&format=pjpg&auto=webp&s=051c36c5fe8dcb5ba35cb2ee47a7a37ed4626b3c" style="width:200px;height:200px">
-    <img id="jeff" class="hidden" src="https://hips.hearstapps.com/hmg-prod/images/jeffrey-epstein-attends-launch-of-radar-magazine-at-hotel-news-photo-591529968-1562782199.jpg?crop=1xw:0.5xh;center,top&resize=1200:*" style="width:200px;height:200px">
-    <script src="script.js"></script>
-
-
-    <h2>Gengar goat</h2>
-    <img id="GengarG" src="https://art.pixilart.com/11f57b69dd3065a.png" alt="Gengar looking sick">
+        <div class="text-box">
+            <h1> Car Rental</h1>
+            <p> With this site you can easily rent a car</p>
+            <a href="" class="hero-btn"> Rent A Car</a>
+        </div>
+    </section>
     
-</body>
+</body> 
 </html>
