--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="https://art.pixilart.com/11f57b69dd3065a.png">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://art.pixilart.com/11f57b69dd3065a.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Car Rental Site</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <section>
-        <nav>
-            <img id="GengarG" src="https://art.pixilart.com/11f57b69dd3065a.png" alt="TempLogo">
-            <div class="nav-links">
-                <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="login.html">LOGIN</a></li>
-                    <li><a href="">CONTACT</a></li>
-                </ul>
-            </div>
-        </nav>
-
-        <div class="text-box">
-            <h1> Car Rental</h1>
-            <p> With this site you can easily rent a car</p>
-            <a href="" class="hero-btn"> Rent A Car</a>
+      <nav>
+        <img
+          id="GengarG"
+          src="https://art.pixilart.com/11f57b69dd3065a.png"
+          alt="TempLogo"
+        />
+        <div class="nav-links">
+          <ul>
+            <li><a href="">HOME</a></li>
+            <li><a href="">ABOUT</a></li>
+            <li><a href="login.html">LOGIN</a></li>
+            <li><a href="">CONTACT</a></li>
+          </ul>
         </div>
+      </nav>
+
+      <div class="text-box">
+        <h1>Rental Roulette</h1>
+        <p>With this site you can easily rent a car</p>
+        <a href="" class="hero-btn"> Rent A Car</a>
+      </div>
     </section>
-    
-</body> 
+  </body>
 </html>
