--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
         <p>With this site you can easily rent a car</p>
         <a href="" class="hero-btn"> Rent A Car</a>
       </div>
+
+      <div class="card-container">
+        <div class="card">
+          <img src="" alt="" />
+          <h2>Car 1</h2>
+          <p>Price: $100</p>
+          <a href="" class="card-btn">Rent</a>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <h2>Car 2</h2>
+          <p>Price: $200</p>
+          <a href="" class="card-btn">Rent</a>
+        </div>
+        <div class="card">
+          <img src="" alt="" />
+          <h2>Car 3</h2>
+          <p>Price: $300</p>
+          <a href="" class="card-btn">Rent</a>
+        </div>
+      </div>
     </section>
   </body>
 </html>
