Page for searching cars

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="text-box">
         <h1>Rental Roulette</h1>
         <p>With this site you can easily rent a car</p>
-        <a href="" class="hero-btn"> Rent A Car</a>
+        <a href="carSearchPage.html" class="hero-btn"> Rent A Car</a>
       </div>
 
       <div class="card-container">
