Hamburger toggle button on navigation links when screen is small

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
       href="https://art.pixilart.com/11f57b69dd3065a.png"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="script" href="script.js">
     <title>Car Rental Site</title>
   </head>
   <body>
     <section>
       <nav>
-        <img
-          id="GengarG"
-          src="https://art.pixilart.com/11f57b69dd3065a.png"
-          alt="TempLogo"
-        />
+        <img id="GengarG" src="https://art.pixilart.com/11f57b69dd3065a.png"alt="TempLogo"/>
+        <div class="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="nav-links">
           <ul>
             <li><a href="">HOME</a></li>
